# YesUI

./: .gitignore  CMakeLists.txt  README.md  WindowsUILibrary.slnx  WindowsUILibrary.vcxproj  WindowsUILibrary.vcxproj.filters  YesUI.h
WindowsUILibrary/: WindowsUILibrary.cpp  WindowsUILibrary.vcxproj  WindowsUILibrary.vcxproj.filters  YesUI.h
